--- a/public/swagger.html
+++ b/public/swagger.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title>Swagger UI</title>
@@ -15,8 +15,8 @@
         SwaggerUIBundle({
           url: "/api/docs",
           dom_id: "#swagger-ui",
-        });
-      };
+        })
+      }
     </script>
   </body>
 </html>
